--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.1",
     "@supabase/supabase-js": "^2.57.4",
     "@vercel/analytics": "^1.5.0",
+    "date-fns": "^4.1.0",
     "firebase": "^12.3.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
