--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
-    { "source": "/:path*", "destination": "/index.html" }
+    { "source": "/((?!assets).*)", "destination": "/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
